<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/add_recipe"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:background="@color/recipeappicon_background"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipe_title_edit_text"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipe_ingredients_edit_text"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipe_instructions_edit_text"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipe_imageUrl_edit_text"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_imageUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/open_gallery_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/open_gallery_button_text" />

        <Button
                android:id="@+id/done_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@string/done_button_text" />

    </LinearLayout>

</LinearLayout>